<resources>
    <string name="app_name">ForumApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Wyloguj</string>
    <string name="image_desc">zdjecie profilu</string>
    <string name="settings_button">Settings button</string>
    <string name="type_new_nick">Podaj nowy nick</string>
    <string name="type_email">Podaj email</string>
    <string name="type_about_you">Napisz coś o sobie</string>
    <string name="type_signature">Napisz czym jeździsz :)</string>
    <string name="update">Aktualizuj</string>
    <string name="update_profile">Aktualizacja profilu</string>
    <string name="type_password">Podaj hasło</string>
    <string name="type_login">Podaj nazwę użytkownika</string>
    <string name="login">Logowanie</string>
    <string name="login_button_text">Zaloguj</string>
    <string name="add_button">Add button</string>
    <string name="answers_text">Odpowiedzi:</string>
    <string name="back_button">back button</string>
    <string name="thread">Thread</string>
    <string name="direction_home">Home</string>
    <string name="reply_button">reply button</string>
    <string name="type_post">Napisz komentarz</string>
    <string name="post_title">Twój Komentarz</string>
    <string name="add_post">dodaj Komentarz</string>
    <string name="obserwuj">Obserwuj</string>
    <string name="unfollow">Przestań obserwować</string>
    <string name="add_thread_title">Dodawanie wątku</string>
    <string name="add_thread">Dodaj wątek</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_thread_description">Dodaj opis wątku</string>
    <string name="type_thread_title">Dodaj tytuł wątku</string>
    <string name="follow">follow</string>
    <string name="add_date">Dodano:</string>
    <string name="views">Odsłony</string>
    <string name="answiers_text">Odpowiedzi</string>
    <string name="rank">Ranga</string>
    <string name="reputation_text">Reputacja:</string>
    <string name="image_holder">Image holder</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="thread_update">Aktualizacja wątku</string>
    <string name="podaj_nowy_tytu">Podaj nowy tytuł</string>
    <string name="type_new_title">Podaj nowy tytuł</string>
    <string name="type_new_thread_desc">Podaj nowy opis wątku</string>
    <string name="upvote">upvote</string>
    <string name="downvote">downvote</string>
</resources>