<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_follow"
        android:icon="@drawable/baseline_follow"
        android:iconTint="@color/white"
        android:title="@string/follow"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/round_edit_24"
        android:iconTint="@color/white"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/baseline_delete_24"
        android:iconTint="@color/white"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>