<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" >
        <TextView
            android:id="@+id/post_title"
            android:text="@string/post_title"
            android:layout_width="350dp"
            android:layout_height="120dp"
            android:fontFamily="@font/happymonkey_regular"
            android:textColor="@color/appColor"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/post_message_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_post"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_message_input"
                android:layout_width="match_parent"
                android:maxLines="4"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_button"
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:text="@string/add_post"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/post_message_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>