<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forum.profile.UserSettingsFragment">


    <TextView
        android:id="@+id/form_name"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:gravity="top|center"
        android:fontFamily="@font/happymonkey_regular"
        android:textColor="@color/appColor"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:text="@string/thread_update"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Aktualizacja profilu"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/form_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/update_button">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/thread_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_new_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/thread_title_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/thread_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_new_thread_desc"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thread_title_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/thread_description_input"
                android:layout_width="match_parent"
                android:maxLines="4"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerHorizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/form"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>