<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forum.thread.ThreadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:background="@null"
            app:tint="@color/appColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/back_button" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:textColor="@color/appColor"
            android:text="@string/direction_home"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/thread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/threadBackgroundColor"
            app:cardCornerRadius="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/thread_profile_picture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pikaczu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ProfilePicture" />

                <TextView
                    android:id="@+id/thread_author_name"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:gravity="left|center"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@id/thread_profile_picture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/thread_profile_picture"
                    app:layout_constraintTop_toTopOf="@id/thread_profile_picture"
                    tools:ignore="RtlHardcoded"
                    tools:text="bartelomelo" />


                <TextView
                    android:id="@+id/thread_title"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@id/thread_author_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/thread_profile_picture"
                    tools:text="Czy Aprilia RS pali gumę na dwójce?" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/thread_image"
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/aprilia"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/thread_title"
                    app:shapeAppearanceOverlay="@style/ThreadPicture" />

                <TextView
                    android:id="@+id/thread_description"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/thread_image"
                    tools:text="Witam, jestem początkującym motocyklistą, czy moja aprilka spali gumę na dwójeczce? :)" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/answers_text"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:text="@string/answers_text"
            android:fontFamily="@font/happymonkey_regular"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="@color/appColor"
            app:layout_constraintTop_toBottomOf="@id/thread"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/thread_posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/answers_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>